feat(api.js): manejo de errores

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -19,7 +19,34 @@
     "placeholderIDNumber": "Escriba su número de identificación",
     "placeholderEmail": "Escriba su correo electrónico",
     "placeholderPhoneNumber": "Escriba su número de teléfono",
-    "placeholderPhoto": "Seleccione una foto"
+    "placeholderPhoto": "Seleccione una foto",
+    "pageTitle": "Gestión de Contactos",
+    "contactListTitle": "Lista de Contactos",
+    "noContactsRegistered": "No hay contactos registrados.",
+    "headerNumber": "#",
+    "headerGreeting": "Saludo",
+    "headerFullName": "Nombre Completo",
+    "headerID": "Número de Identificación",
+    "headerEmail": "Correo Electrónico",
+    "headerPhone": "Número de Teléfono",
+    "headerPhoto": "Fotografía",
+    "headerActions": "Acciones",
+    "edit": "Editar",
+    "delete": "Eliminar",
+    "contactAdded": "Contacto agregado correctamente.",
+    "contactUpdated": "Contacto actualizado correctamente.",
+    "contactDeleted": "Contacto eliminado correctamente.",
+    "errorSaving": "Error al guardar el contacto.",
+    "errorDeleting": "Error al eliminar el contacto.",
+    "confirmDelete": "¿Está seguro de que desea eliminar este contacto?",
+    "loadingContacts": "Cargando contactos...",
+    "fetchingContactsError": "Error al cargar los contactos. Inténtelo de nuevo.",
+    "noAvailable": "No disponible",
+    "loadingError": "Error al cargar la información.",
+    "loadingContact": "Cargando contacto...",
+    "deletingContact": "Eliminando contacto...",
+    "saveContact": "Guardar Contacto",
+    "updateContact": "Actualizar Contacto"
   },
   "home": {
     "title": "Sistema de Gestión de Eventos",
@@ -35,7 +62,7 @@
     "noEventsAvailable": "No hay eventos destacados disponibles.",
     "descriptionUnavailable": "Sin descripción disponible.",
     "dateTime": "Fecha y hora:",
-    "titleVideo":"Para saber cómo utilizar la página mira el siguiente vídeo."
+    "titleVideo": "Para saber cómo utilizar la página mira el siguiente vídeo."
   },
   "eventoForm": {
     "title": "Título del Evento",
@@ -70,8 +97,8 @@
     "manageEvents": "Gestión de Eventos",
     "eventListTitle": "Lista de Eventos",
     "loadingEvents": "Cargando eventos...",
-    "noEvents": "No hay eventos registrados.",
-    "errorLoadingEvents": "Error al cargar los eventos. Por favor, intente nuevamente.",
+    "noEvents": "No se han registrado eventos.",
+    "errorLoadingEvents": "Error al cargar los eventos. Inténtelo de nuevo, por favor.",
     "title": "Título",
     "dateTime": "Fecha y Hora",
     "timeZone": "Zona Horaria",
@@ -84,10 +111,23 @@
     "actions": "Acciones",
     "edit": "Editar",
     "delete": "Eliminar",
-    "eventDeleted": "Evento eliminado correctamente.",
-    "errorDeletingEvent": "Hubo un error al eliminar el evento.",
-    "eventUpdated": "Evento actualizado correctamente.",
-    "errorUpdatingEvent": "Hubo un error al actualizar el evento."
+    "eventDeleted": "Evento eliminado con éxito.",
+    "errorDeletingEvent": "Error al eliminar el evento.",
+    "eventUpdated": "Evento actualizado con éxito.",
+    "errorUpdatingEvent": "Error al actualizar el evento.",
+    "eventAdded": "Evento agregado con éxito",
+    "updateFailed": "La actualización falló",
+    "eventAwait": "Espere mientras cargamos la información",
+    "locationEditLoaded": "Ubicación cargada para edición",
+    "locationAdded": "Ubicación agregada con éxito",
+    "errorSaving": "Error al guardar la ubicación",
+    "locationUpdated": "Ubicacion actualizada correctamente",
+    "locationDeleted": "Ubicacion eliminada correctamente",
+    "confirmDelete": "¿Estás seguro de que deseas eliminar este contacto?",
+    "deleting": "Elimiando",
+    "deleteFailed": "Eliminación fallida",
+    "eventEditLoaded": "Cargando evento para editar",
+    "eventNotFound": "Evento no encontrado"
   },
   "footer": {
     "copyright": "© {{year}} Gestión de Eventos. Todos los derechos reservados.",
@@ -111,27 +151,6 @@
     "placeholderTitle": "Introduzca el título de la ubicación",
     "placeholderAddress": "Introduzca la dirección",
     "placeholderCoordinates": "Introduzca las coordenadas"
-  },
-  "contactManagement": {
-    "pageTitle": "Gestión de Contactos",
-    "contactListTitle": "Lista de Contactos",
-    "noContactsRegistered": "No hay contactos registrados.",
-    "headerNumber": "#",
-    "headerGreeting": "Saludo",
-    "headerFullName": "Nombre Completo",
-    "headerID": "Número de Identificación",
-    "headerEmail": "Correo Electrónico",
-    "headerPhone": "Número de Teléfono",
-    "headerPhoto": "Fotografía",
-    "headerActions": "Acciones",
-    "edit": "Editar",
-    "delete": "Eliminar",
-    "contactAdded": "Contacto agregado correctamente.",
-    "contactUpdated": "Contacto actualizado correctamente.",
-    "contactDeleted": "Contacto eliminado correctamente.",
-    "errorSaving": "Hubo un error al guardar el contacto.",
-    "errorDeleting": "Hubo un error al eliminar el contacto.",
-    "confirmDelete": "¿Estás seguro de que deseas eliminar este contacto?"
   },
   "language": {
     "changeLanguage": "Idioma"
