--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,7 +19,34 @@
     "placeholderIDNumber": "Enter your identification number",
     "placeholderEmail": "Enter your email",
     "placeholderPhoneNumber": "Enter your phone number",
-    "placeholderPhoto": "Choose a photo"
+    "placeholderPhoto": "Choose a photo",
+    "pageTitle": "Contact Management",
+    "contactListTitle": "List of Contacts",
+    "noContactsRegistered": "No contacts registered.",
+    "headerNumber": "#",
+    "headerGreeting": "Greeting",
+    "headerFullName": "Full Name",
+    "headerID": "Identification Number",
+    "headerEmail": "Email",
+    "headerPhone": "Phone Number",
+    "headerPhoto": "Photo",
+    "headerActions": "Actions",
+    "edit": "Edit",
+    "delete": "Delete",
+    "contactAdded": "Contact added successfully.",
+    "contactUpdated": "Contact updated successfully.",
+    "contactDeleted": "Contact deleted successfully.",
+    "errorSaving": "There was an error saving the contact.",
+    "loadingContacts": "Loading contacts...",
+    "loadingContact": "Loading contact...",
+    "confirmDelete": "Are you sure you want to delete this contact?",
+    "deletingContact": "Deleting contact...",
+    "saveContact": "Save Contact",
+    "updateContact": "Update Contact",
+    "fetchingContactsError": "Error loading contacts. Please try again.",
+    "noAvailable": "Not available",
+    "loadingError": "Error loading information.",
+    "errorDeleting": "Error al eliminar contacto"
   },
   "home": {
     "title": "Event Management System",
@@ -87,7 +114,20 @@
     "eventDeleted": "Event successfully deleted.",
     "errorDeletingEvent": "There was an error deleting the event.",
     "eventUpdated": "Event updated successfully.",
-    "errorUpdatingEvent": "There was an error updating the event."
+    "errorUpdatingEvent": "There was an error updating the event.",
+    "eventAdded": "Event added successfully",
+    "updateFailed": "Update failed",
+    "eventAwait": "Please wait while we load the information",
+    "locationEditLoaded": "Location ready for editing",
+    "locationAdded": "Location added successfully",
+    "errorSaving": "Error saving location",
+    "locationUpdated": "Location updated correctly",
+    "locationDeleted": "Location deleted successfully",
+    "confirmDelete": "Are you sure you want to delete this contact?",
+    "deleting": "Deleting",
+    "deleteFailed": "Delete failed",
+    "eventEditLoaded": "Loading events to edit",
+    "eventNotFound": "Event not found"
   },
   "footer": {
     "copyright": "© {{year}} Event Management. All rights reserved.",
@@ -111,27 +151,6 @@
     "placeholderTitle": "Enter the location title",
     "placeholderAddress": "Enter the address",
     "placeholderCoordinates": "Enter the coordinates"
-  },
-  "contactManagement": {
-    "pageTitle": "Contact Management",
-    "contactListTitle": "List of Contacts",
-    "noContactsRegistered": "No contacts registered.",
-    "headerNumber": "#",
-    "headerGreeting": "Greeting",
-    "headerFullName": "Full Name",
-    "headerID": "Identification Number",
-    "headerEmail": "Email",
-    "headerPhone": "Phone Number",
-    "headerPhoto": "Photo",
-    "headerActions": "Actions",
-    "edit": "Edit",
-    "delete": "Delete",
-    "contactAdded": "Contact added successfully.",
-    "contactUpdated": "Contact updated successfully.",
-    "contactDeleted": "Contact deleted successfully.",
-    "errorSaving": "There was an error saving the contact.",
-    "errorDeleting": "There was an error deleting the contact.",
-    "confirmDelete": "Are you sure you want to delete this contact?"
   },
   "language": {
     "changeLanguage": "Language"
