feat(api.js): manejo de errores

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -143,7 +143,7 @@
     "spanish": "Spanish"
   },
   "ubicacionForm": {
-    "title": "Title",
+    "title": "List of ocations",
     "address": "Address",
     "coordinates": "Coordinates",
     "submitButton": "Save Location",
