--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -143,7 +143,7 @@
     "spanish": "Español"
   },
   "ubicacionForm": {
-    "title": "Título",
+    "title": "Lista de ubicaciones",
     "address": "Dirección",
     "coordinates": "Coordenadas",
     "submitButton": "Guardar Ubicación",
