feat(api.js): editar evento

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -129,7 +129,8 @@
     "eventEditLoaded": "Loading events to edit",
     "eventNotFound": "Event not found",
     "yesRememberEvent": "Yes",
-    "noRememberEvent": "No"
+    "noRememberEvent": "No",
+    "loadingEvent": "Cargando evento"
   },
   "footer": {
     "copyright": "© {{year}} Event Management. All rights reserved.",
