--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -129,7 +129,8 @@
     "eventEditLoaded": "Cargando evento para editar",
     "eventNotFound": "Evento no encontrado",
     "yesRememberEvent": "Si",
-    "noRememberEvent": "No"
+    "noRememberEvent": "No",
+    "loadingEvent": "Cargando evento"
   },
   "footer": {
     "copyright": "© {{year}} Gestión de Eventos. Todos los derechos reservados.",
